third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/return_mutual_borrows_invalid.exp

Diagnostics:
error: mutable reference in local `return[0]` requires exclusive access
   ┌─ tests/reference-safety/v1-tests/return_mutual_borrows_invalid.move:16:9
   │
15 │         let f = freeze(s1);
   │                 ---------- previous call result
16 │         (s1, f)
   │         ^^^^^^^ requirement enforced here

error: mutable reference in local `return[0]` requires exclusive access
   ┌─ tests/reference-safety/v1-tests/return_mutual_borrows_invalid.move:20:9
   │
19 │         let f = &s1.f;
   │                 ----- previous field borrow
20 │         (s1, f)
   │         ^^^^^^^ requirement enforced here

error: mutable reference in local `return[0]` requires exclusive access
   ┌─ tests/reference-safety/v1-tests/return_mutual_borrows_invalid.move:36:9
   │
35 │         let f =  &mut s1.f;
   │                  --------- previous mutable field borrow
36 │         (s1, f)
   │         ^^^^^^^ requirement enforced here

error: mutable reference in local `return[1]` requires exclusive access
   ┌─ tests/reference-safety/v1-tests/return_mutual_borrows_invalid.move:39:9
   │
39 │         (&mut s1.f, s1)
   │         ^^^^^^^^^^^^^^^
   │         ││
   │         │previous mutable field borrow
   │         requirement enforced here

error: mutable reference in local `return[1]` requires exclusive access
   ┌─ tests/reference-safety/v1-tests/return_mutual_borrows_invalid.move:42:9
   │
42 │         (id_mut(s1), s1)
   │         ^^^^^^^^^^^^^^^^
   │         ││
   │         │previous mutable call result
   │         requirement enforced here

error: mutable reference in local `return[0]` requires exclusive access
   ┌─ tests/reference-safety/v1-tests/return_mutual_borrows_invalid.move:46:9
   │
45 │         let f = id_mut(&mut s1.f);
   │                 -----------------
   │                 │      │
   │                 │      previous mutable field borrow
   │                 used by mutable call result
46 │         (s1, f)
   │         ^^^^^^^ requirement enforced here

error: mutable reference in local `return[1]` requires exclusive access
   ┌─ tests/reference-safety/v1-tests/return_mutual_borrows_invalid.move:49:9
   │
49 │         (id_mut(&mut s1.f), s1)
   │         ^^^^^^^^^^^^^^^^^^^^^^^
   │         ││      │
   │         ││      previous mutable field borrow
   │         │used by mutable call result
   │         requirement enforced here
